# cybird-watching

./: .gitignore  CHANGELOG.md  CLAUDE.md  ENV.md  README.md  platformio.ini  操作指南.md
docs/: BIRD_WATCHING_FLOW_DIAGRAM.md  CHANGE_FONT_SIZE.md  FILE_TRANSFER_GUIDE.md  GUIDE_TO_ADD_NEW_BIRDS.md  QUICK_START_FOR_BEGINNER.md  STATS_VIEW_GUIDE.md  bird_watching_flow_diagram.md  bird_watching_test_guide.md  file_transfer_guide.md  lvgl_9x_upgrade_analysis.md  stats_view_guide.md
examples/: README.md  bird_config.json
lib/TFT_eSPI/: User_Setup.h
resources/: README.md
resources/configs/: bird_config.csv  bird_config.json
scripts/: README_CLI_TOOLS.md  batch_convert_mp4.bat  cybird_bird.bat  cybird_cli.bat  cybird_cli_with_args.bat  cybird_send.bat  cybird_watching_cli.ps1  holocubic_cli.ps1  pio_run.bat  start_cli.bat  upload_and_monitor.bat
scripts/converter/: .gitignore  README.md  create_test_image.py  pyproject.toml
scripts/converter/src/converter/: __init__.py  batch_processor.py  rgb565.py
scripts/cybird_watching_cli/: .gitignore  README.md  pyproject.toml
scripts/cybird_watching_cli/config/: default.yaml
scripts/cybird_watching_cli/src/cybird_watching_cli/: __init__.py  main.py
scripts/cybird_watching_cli/src/cybird_watching_cli/config/: settings.py
scripts/cybird_watching_cli/src/cybird_watching_cli/core/: command_executor.py  connection.py  file_transfer.py  response_handler.py
scripts/cybird_watching_cli/src/cybird_watching_cli/ui/: console.py
scripts/cybird_watching_cli/src/cybird_watching_cli/utils/: exceptions.py
src/: main.cpp
(+54 files in other folders)
